fix(e2e): enforce fail-fast credentials and mandatory tenant validation in CI
AUDIT REMEDIATION (2025-11-30):

Security Hardening - auth.spec.ts:
- REMOVED insecure fallback credentials (admin@offline.test/Test@1234)
- REMOVED insecure fallback credentials (member@offline.test/Test@1234)
- getPrimaryUser() and getNonAdminUser() now fail fast if env vars missing
- HAS_PRIMARY_USER/HAS_NON_ADMIN_USER now use actual hasTestCredentials()
- Tests will immediately fail if TEST_ADMIN_* or TEST_TEAM_MEMBER_* not set

Multi-Tenancy Hardening - subrole-api-access.spec.ts:
- CI now THROWS if TEST_ORG_ID is not configured (was just a warning)
- Cross-tenant data leaks cannot slip through CI anymore
- Local runs still allow optional tenant checks with info message

RBAC Coverage - API Method Restrictions:
- FINANCE_OFFICER GET invoices now uses expectAllowedWithBodyCheck
- HR_OFFICER GET payroll now uses expectAllowedWithBodyCheck
- Both validate tenant scoping (org_id) when TEST_ORG_ID is set

Resolves audit findings:
- AUTH-001: Insecure fallback credentials removed
- AUTH-002: HAS_* flags now use actual credential checks
- TENANT-001: CI enforces TEST_ORG_ID (hard failure)
- RBAC-001: API Method Restrictions use body validation

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -189,6 +189,29 @@ jobs:
             echo "GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}" >> "$GITHUB_ENV"
           fi
 
+      - name: Validate required E2E secrets (RBAC credentials + tenant org)
+        run: |
+          missing=()
+          required_keys=(
+            TEST_FINANCE_OFFICER_EMAIL TEST_FINANCE_OFFICER_PASSWORD
+            TEST_HR_OFFICER_EMAIL TEST_HR_OFFICER_PASSWORD
+            TEST_SUPPORT_AGENT_EMAIL TEST_SUPPORT_AGENT_PASSWORD
+            TEST_OPERATIONS_MANAGER_EMAIL TEST_OPERATIONS_MANAGER_PASSWORD
+            TEST_TEAM_MEMBER_EMAIL TEST_TEAM_MEMBER_PASSWORD
+            TEST_ADMIN_EMAIL TEST_ADMIN_PASSWORD
+            TEST_ORG_ID
+          )
+          for key in "${required_keys[@]}"; do
+            if [ -z "${!key}" ]; then
+              missing+=("$key")
+            fi
+          done
+
+          if [ "${#missing[@]}" -gt 0 ]; then
+            echo "::error::Missing required E2E secrets: ${missing[*]}. Configure in GitHub Actions secrets."
+            exit 1
+          fi
+
       - name: Run Playwright E2E Tests
         env:
           # Authentication (NextAuth)
