--- a/env.example
+++ b/env.example
@@ -151,9 +151,9 @@ KAFKA_GROUP_ID=fixzit-souq-group
 # Tap Payments (Primary - Mada, Apple Pay, Credit Cards, STC Pay)
 # Official Docs: https://developers.tap.company
 # Dashboard: https://dashboard.tap.company
-TAP_SECRET_KEY=sk_test_XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-TAP_PUBLIC_KEY=pk_test_XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-TAP_WEBHOOK_SECRET=whsec_XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+TAP_SECRET_KEY=
+TAP_PUBLIC_KEY=
+TAP_WEBHOOK_SECRET=
 TAP_WEBHOOK_MAX_BYTES=64000
 TAP_WEBHOOK_RATE_LIMIT=60
 TAP_WEBHOOK_RATE_WINDOW_MS=60000
@@ -295,9 +295,9 @@ SESSION_REMEMBER_DURATION=2592000
 # =============================================================================
 # PAYMENT GATEWAY (PayTabs - Saudi Arabia)
 # =============================================================================
-PAYTABS_PROFILE_ID=your_profile_id_here
-PAYTABS_SERVER_KEY=your_server_key_here
-PAYTABS_CLIENT_KEY=your_client_key_here
+PAYTABS_PROFILE_ID=
+PAYTABS_SERVER_KEY=
+PAYTABS_CLIENT_KEY=
 PAYTABS_REGION=SAU
 PAYTABS_CURRENCY=SAR
 PAYTABS_BASE_URL=https://secure.paytabs.sa
