--- a/.github/workflows/secret-scan.yml
+++ b/.github/workflows/secret-scan.yml
@@ -40,7 +40,7 @@ jobs:
         if: always()
         run: |
           echo "## Secret Scanning Summary" >> $GITHUB_STEP_SUMMARY
-          echo "ðŸ“Š Gitleaks scan completed â€” see status above" >> $GITHUB_STEP_SUMMARY
+          echo "📊 Gitleaks scan completed — see status above" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**What was scanned:**" >> $GITHUB_STEP_SUMMARY
           echo "- Git history (full repository)" >> $GITHUB_STEP_SUMMARY
